crates/products/wt/client/src/shell/snapshots/wt__shell__world_card__tests__world_card_action_history_empty.snap
---
source: crates/products/wt/client/src/shell/world_card.rs
assertion_line: 433
expression: "rendered_card(&world, &[], 52)"
---
┌ 󰐊 RUNNING ─────────────────────────────── … Menu ┐
│ars.quiet-panda                                   │
│2 CPU · 4G · 1G/32G disk                          │
│Codex no observed Byobu panes                     │
├─ Action history ─────────────────────────────────┤
│No recorded actions                               │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
└──────────────────────────────────────────────────┘
