crates/products/wt/client/src/shell/snapshots/wt__shell__world_card__tests__world_card_action_history_loading.snap
---
source: crates/products/wt/client/src/shell/world_card.rs
expression: "rendered_card(&loading, &[], 52)"
---
┌ 󰐊 RUNNING ─────────────────────────────── … Menu ┐
│ars.loading-panda                                 │
│2 CPU · 4G · 1G/32G disk                          │
│Codex no observed Byobu panes                     │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
├─ Action history ─────────────────────────────────┤
│Loading…                                          │
│                                                  │
│                                                  │
│                                                  │
│                                                  │
└──────────────────────────────────────────────────┘
