crates/products/wt/client/src/shell/snapshots/wt__shell__world_card__tests__world_card_action_history_populated.snap
---
source: crates/products/wt/client/src/shell/world_card.rs
expression: "rendered_card(&world, &panes, 76)"
---
┌ 󰐊 RUNNING ─────────────────────────────────────────────────────── … Menu ┐
│ars.clever-turtle                                                         │
│2 CPU · 4G · 6G/32G disk                                                  │
│Codex · window “codex” · CHANGING                                         │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
├─ Action history ─────────────────────────────────────────────────────────┤
│wtg: opened PR #250 for wt/world-card-action-log · github.com/lucasavila0…│
│Git: pushed wt/world-card-action-log to github.com/lucasavila00/wt        │
│wtg: checked CI · github.com/lucasavila00/wt                              │
│Git: fetched from github.com/lucasavila00/wt                              │
│wtg: commented on PR #250 · github.com/lucasavila00/wt                    │
└──────────────────────────────────────────────────────────────────────────┘
