crates/products/wt/client/src/shell/snapshots/wt__shell__world_card__tests__world_card_action_history_with_error_detail.snap
---
source: crates/products/wt/client/src/shell/world_card.rs
expression: "rendered_card(&world, &[], 76)"
---
┌ 󰅚 ERROR ───────────────────────────────────────────────────────── … Menu ┐
│ars.clever-turtle                                                         │
│2 CPU · 4G · 6G/32G disk                                                  │
│SSH readiness failed; run `wt rm ars.clever-turtle`                       │
│Codex no observed Byobu panes                                             │
│                                                                          │
│                                                                          │
│                                                                          │
│                                                                          │
├─ Action history ─────────────────────────────────────────────────────────┤
│wtg: opened PR #250 for wt/world-card-action-log · github.com/lucasavila0…│
│Git: pushed wt/world-card-action-log to github.com/lucasavila00/wt        │
│wtg: checked CI · github.com/lucasavila00/wt                              │
│Git: fetched from github.com/lucasavila00/wt                              │
│wtg: commented on PR #250 · github.com/lucasavila00/wt                    │
└──────────────────────────────────────────────────────────────────────────┘
